--- a/Profiles/alioth_los_a15.env
+++ b/Profiles/alioth_los_a15.env
@@ -7,7 +7,7 @@ CUSTOM_CMDS:CLANG_TRIPLE=aarch64-linux-gnu-
 EXTRA_CMDS:NM=llvm-nm OBJDUMP=llvm-objdump STRIP=llvm-strip LLVM=1 LLVM_IAS=1 V=$VERBOSE
 
 KERNEL_SOURCE=https://github.com/sonako0122/kernel_xiaomi_sm8250_mod.git
-KERNEL_BRANCH=lineage22-mod
+KERNEL_BRANCH=android15-lineage22-mod
 CLANG_SOURCE=https://github.com/llvm/llvm-project/releases/download/llvmorg-19.1.7/LLVM-19.1.7-Linux-X64.tar.xz
 CLANG_BRANCH=
 
@@ -27,8 +27,8 @@ KERNELSU_NAME=KernelSU
 SUSFS_ENABLE=false
 SUSFS_FIXED=false
 
-AK3_SOURCE=https://github.com/osm0sis/AnyKernel3.git
-AK3_BRANCH=master
+AK3_SOURCE=https://github.com/liyafe1997/AnyKernel3.git
+AK3_BRANCH=kona
 
 BOOT_SOURCE=https://github.com/boot_author/android_kernel_codename/raw/refs/heads/main/rom/source_imgs/boot.img
 
