--- a/Profiles/alioth_los_a15.env
+++ b/Profiles/alioth_los_a15.env
@@ -35,4 +35,4 @@ BOOT_SOURCE=https://github.com/boot_author/android_kernel_codename/raw/refs/head
 LXC_ENABLE=false
 
 HAVE_NO_DTBO=false
-ROM_TEXT=los22-mod
+ROM_TEXT=MIUI
