--- a/.github/workflows/miui.yml
+++ b/.github/workflows/miui.yml
@@ -242,6 +242,7 @@ jobs:
           
       - name: Set MIUI DEFCONFIG
         run: |
+            cd $GITHUB_WORKSPACE/device_kernel
             echo "CONFIG_PERF_CRITICAL_RT_TASK=y" >> ./arch/arm64/configs/${{ env.DEFCONFIG_NAME }}
             echo "CONFIG_SF_BINDER=y" >> ./arch/arm64/configs/${{ env.DEFCONFIG_NAME }}
             echo "CONFIG_OVERLAY_FS=y" >> ./arch/arm64/configs/${{ env.DEFCONFIG_NAME }}
