--- a/.github/workflows/miui.yml
+++ b/.github/workflows/miui.yml
@@ -243,6 +243,7 @@ jobs:
       - name: Set MIUI DEFCONFIG
         run: |
             cd $GITHUB_WORKSPACE/device_kernel
+            echo "CONFIG_SLAB_FREELIST_RANDOM=y" >> ./arch/arm64/configs/${{ env.DEFCONFIG_NAME }}
             echo "CONFIG_SF_BINDER=y" >> ./arch/arm64/configs/${{ env.DEFCONFIG_NAME }}
             # echo "CONFIG=DEBUG_FS=y >>" ./arch/arm64/configs/${{ env.DEFCONFIG_NAME }}
             echo "CONFIG_MIGT=y" >> ./arch/arm64/configs/${{ env.DEFCONFIG_NAME }}
