--- a/Profiles/alioth_los_a15.env
+++ b/Profiles/alioth_los_a15.env
@@ -8,7 +8,7 @@ EXTRA_CMDS:NM=llvm-nm OBJDUMP=llvm-objdump STRIP=llvm-strip LLVM=1 LLVM_IAS=1 V=
 
 KERNEL_SOURCE=https://github.com/sonako0122/kernel_xiaomi_sm8250_mod.git
 KERNEL_BRANCH=android15-lineage22-mod
-CLANG_SOURCE=https://github.com/llvm/llvm-project/releases/download/llvmorg-20.1.8/LLVM-20.1.8-Linux-X64.tar.xz
+CLANG_SOURCE=https://github.com/ZyCromerZ/Clang/releases/download/20.0.0git-20250129-release/Clang-20.0.0git-20250129.tar.gz
 CLANG_BRANCH=
 
 GCC_GNU=false
