--- a/.github/workflows/miui.yml
+++ b/.github/workflows/miui.yml
@@ -15,6 +15,7 @@ env:
   KPM_PATCH_SOURCE: "https://raw.githubusercontent.com/ShirkNeko/SukiSU_patch/refs/heads/main/kpm/patch_linux" # patch exec file source -> raw.githubusercontent.com/Test/Test/patch .
   BUILD_DEBUGGER: "false" # Output build errors.
   REKERNEL_ENABLE: "false"
+  MIUI_CONFIG: "true"
 jobs:
   build:
     name: Build Kernel by ${{ github.actor }}
@@ -219,10 +220,10 @@ jobs:
           echo "KERNEL_VERSION=$(head -n 3 device_kernel/Makefile | grep -E 'VERSION|PATCHLEVEL' | awk '{print $3}' | paste -sd '.')" >> $GITHUB_ENV
 
       - name: Set KSU and SUSFS for DEFCONFIG
+        if: env.MIUI == 'true'
         run: |
           cd $GITHUB_WORKSPACE/device_kernel
           echo "CONFIG_KSU=y" >> ./arch/arm64/configs/${{ env.DEFCONFIG_NAME }}
-          if [[ "${{ env.SUSFS_ENABLE }}" == "true" ]]; then
             echo "CONFIG_KSU_SUSFS=y" >> ./arch/arm64/configs/${{ env.DEFCONFIG_NAME }}
             echo "CONFIG_KSU_SUSFS_HAS_MAGIC_MOUNT=y" >> ./arch/arm64/configs/${{ env.DEFCONFIG_NAME }}
             echo "CONFIG_KSU_SUSFS_SUS_PATH=y" >> ./arch/arm64/configs/${{ env.DEFCONFIG_NAME }}
@@ -242,7 +243,7 @@ jobs:
           
       - name: Set MIUI DEFCONFIG
         run: |
-            if [[ "${{ env.MIUI }}" == "true" ]]; then
+            if [[ "${{ env.MIUI_CONFIG }}" == "true" ]]; then
             cd $GITHUB_WORKSPACE/device_kernel
             echo "CONFIG_SLAB_FREELIST_RANDOM=y" >> ./arch/arm64/configs/${{ env.DEFCONFIG_NAME }}
             echo "CONFIG_PERF_CRITICAL_RT_TASK=y" >> ./arch/arm64/configs/${{ env.DEFCONFIG_NAME }}
@@ -488,8 +489,8 @@ jobs:
           max-size: 2G
           
       - name : Set MIUI
+        if: env.MIUI == 'true'
         run : |
-            if [[ "${{ env.MIUI }}" == "true" ]]; then
             echo "Set for MIUI dts....."
             dts_source=$GITHUB_WORKSPACE/device_kernel/arch/arm64/boot/dts/vendor/qcom
             # Correct panel dimensions on MIUI builds
@@ -537,7 +538,6 @@ jobs:
             sed -i 's/\/\/39 01 00 00 00 00 05 51 07 FF 00 00/39 01 00 00 00 00 05 51 07 FF 00 00/g' ${dts_source}/dsi-panel-j2s-mp-42-02-0a-dsc-cmd.dtsi
             sed -i 's/\/\/39 01 00 00 01 00 03 51 03 FF/39 01 00 00 01 00 03 51 03 FF/g' ${dts_source}/dsi-panel-j11-38-08-0a-fhd-cmd.dtsi
             sed -i 's/\/\/39 01 00 00 11 00 03 51 03 FF/39 01 00 00 11 00 03 51 03 FF/g' ${dts_source}/dsi-panel-j2-p2-1-38-0c-0a-dsc-cmd.dtsi
-            fi
             
       - name: Build Kernel
         run: |
