--- a/Profiles/alioth_los_a15.env
+++ b/Profiles/alioth_los_a15.env
@@ -12,7 +12,7 @@ KERNEL_BRANCH=magictime-miui
 CLANG_SOURCE=https://github.com/ZyCromerZ/Clang/releases/download/20.0.0git-20250129-release/Clang-20.0.0git-20250129.tar.gz
 CLANG_BRANCH=
 
-GCC_GNU=true
+GCC_GNU=false
 GCC_64_SOURCE=https://github.com/LineageOS/android_prebuilts_gcc_linux-x86_aarch64_aarch64-linux-android-4.9
 GCC_64_BRANCH=lineage-19.1
 GCC_32_SOURCE=https://github.com/LineageOS/android_prebuilts_gcc_linux-x86_arm_arm-linux-androideabi-4.9
