--- a/.github/workflows/miui.yml
+++ b/.github/workflows/miui.yml
@@ -15,7 +15,7 @@ env:
   KPM_PATCH_SOURCE: "https://raw.githubusercontent.com/ShirkNeko/SukiSU_patch/refs/heads/main/kpm/patch_linux" # patch exec file source -> raw.githubusercontent.com/Test/Test/patch .
   BUILD_DEBUGGER: "false" # Output build errors.
   REKERNEL_ENABLE: "false"
-  MIUI_CONFIG: "true"
+  MIUI_CONFIG: "false"
 jobs:
   build:
     name: Build Kernel by ${{ github.actor }}
