--- a/.github/workflows/miui.yml
+++ b/.github/workflows/miui.yml
@@ -243,8 +243,8 @@ jobs:
           
       - name: Set MIUI DEFCONFIG
         run: |
-            if [[ "${{ env.MIUI_CONFIG }}" == "true" ]]; then
             cd $GITHUB_WORKSPACE/device_kernel
+            if [[ "${{ env.MIUI_CONFIG }}" == "true" ]]; then
             echo "CONFIG_SLAB_FREELIST_RANDOM=y" >> ./arch/arm64/configs/${{ env.DEFCONFIG_NAME }}
             echo "CONFIG_PERF_CRITICAL_RT_TASK=y" >> ./arch/arm64/configs/${{ env.DEFCONFIG_NAME }}
             echo "CONFIG_SF_BINDER=y" >> ./arch/arm64/configs/${{ env.DEFCONFIG_NAME }}
@@ -493,8 +493,7 @@ jobs:
           sudo swapon /swapfile
           sudo swapon --show
           
-      - name : Set MIUI
-        if: env.MIUI == 'true'
+      - name : Set MIUI DTS
         run : |
             echo "Set for MIUI dts....."
             dts_source=$GITHUB_WORKSPACE/device_kernel/arch/arm64/boot/dts/vendor/qcom
