--- a/Profiles/alioth_los_a15.env
+++ b/Profiles/alioth_los_a15.env
@@ -8,7 +8,7 @@ EXTRA_CMDS:LD=ld.lld LLVM=1 LLVM_IAS=1 HOSTCC=gcc AS=llvm-as AR=llvm-ar NM=llvm-
 
 KERNEL_SOURCE=https://github.com/sonako0122/kernel_xiaomi_sm8250_mod
 KERNEL_BRANCH=android15-lineage22-mod
-CLANG_SOURCE=https://github.com/ZyCromerZ/Clang/releases/download/20.0.0git-20250129-release/Clang-20.0.0git-20250129.tar.gz
+CLANG_SOURCE=https://android.googlesource.com/toolchain/llvm-project/+archive/5e96669f06077099aa41290cdb4c5e6fa0f59349.tar.gz
 CLANG_BRANCH=
 
 GCC_GNU=false
