--- a/Profiles/alioth_los_a15.env
+++ b/Profiles/alioth_los_a15.env
@@ -8,8 +8,8 @@ EXTRA_CMDS:LD=ld.lld LLVM=1 LLVM_IAS=1 HOSTCC=gcc AS=llvm-as AR=llvm-ar NM=llvm-
 
 KERNEL_SOURCE=https://github.com/sonako0122/kernel_xiaomi_sm8250_mod
 KERNEL_BRANCH=android15-lineage22-mod
-CLANG_SOURCE=https://ci.android.com/builds/submitted/10078031/aosp_llvm-toolchain_linux-x86/latest/raw/clang-r498229b.zip
-CLANG_BRANCH=
+CLANG_SOURCE=https://android.googlesource.com/platform/prebuilts/clang/host/linux-x86
+CLANG_BRANCH=android15-release
 
 GCC_GNU=false
 GCC_64_SOURCE=https://github.com/LineageOS/android_prebuilts_gcc_linux-x86_aarch64_aarch64-linux-android-4.9
