--- a/.github/workflows/miui.yml
+++ b/.github/workflows/miui.yml
@@ -519,17 +519,17 @@ jobs:
           PATCH_FILE="/tmp/Patches/Rekernel/rekernel-${{ env.KERNEL_VERSION }}.patch"
 
           if [ -f "$PATCH_FILE" ]; then
-            # cp /tmp/Patches/Rekernel/patches.sh ./
-            # bash patches.sh
             cp /tmp/Patches/Rekernel/rekernel-${{ env.KERNEL_VERSION }}.patch ./
             patch -p1 < rekernel-${{ env.KERNEL_VERSION }}.patch || true
+            cp /tmp/Patches/Rekernel/patches.sh ./
+            bash patches.sh
             echo "Re:Kernel Patched."
           else
             echo "Your kernel not supported it."
           fi
 
       - name: Fixed Kernel Patch
-        if: env.REKERNEL_ENABLE == 'true'
+        if: env.SUSFS_ENABLE == 'true' && env.SUSFS_FIXED == 'true'
         run: |
           # if need susfs " env.SUSFS_ENABLE == 'true' && env.SUSFS_FIXED == 'true' "
         
